--- a/client/src/Payment.css
+++ b/client/src/Payment.css
@@ -6,7 +6,7 @@
   }
   
   .payment-title {
-    font-family: Georgia, serif;
+    font-family: Arial, sans-serif;
     font-size: 2.5rem;
     color: #14b8a6;
     text-align: left;
